<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marion.wcs.MainActivity"
    android:paddingRight="16dp"
    android:paddingLeft="16dp">


    <CheckBox
        android:text= "@string/CheckboxText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:id="@+id/checkBox"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/EditText1"
        android:ems="10"
        android:layout_marginTop="63dp"
        android:id="@+id/editText1"
        android:layout_below="@+id/checkBox"
        android:layout_alignRight="@+id/checkBox"
        android:layout_alignEnd="@+id/checkBox" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/EditText2"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/editText1"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignStart="@+id/editText1" />

    <Button
        android:text="@string/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:id="@+id/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:id="@+id/textView3" />

    <TextView
        android:background="@color/colorAccent"
        android:text="@string/WelcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"/>


</RelativeLayout>